fix math overflow issue

--- a/assets/stylesheets/post.scss
+++ b/assets/stylesheets/post.scss
@@ -16,6 +16,10 @@
 }
 
 article {
+    .MathJax, .math, .mrow {
+        overflow: scroll;
+    }
+
     header {
         margin-bottom: 2em;
 
